# hackathon.webbu.se

./: .env.example  README.md  docker-compose.override.yml  docker-compose.yml  mise.toml  package-lock.json
.zed/: settings.json
api/: Dockerfile.development  pyproject.toml
api/app/: auth.py  db.py  deps.py  main.py  projects.py  utils.py
db/: Dockerfile  docker-entrypoint.sh
db/migrations/: 20260221114709_create_users_table.sql  20260221125235_create_session_table.sql  20260221140345_create_projects_table.sql  20260221193919_users_email.sql
nextjs/: Dockerfile.development  Dockerfile.production  package-lock.json  package.json  pollen.config.mjs  uno.config.ts
nextjs/app/: globals.css  layout.tsx  pollen.css  preflight.css
nextjs/app/(protected)/: layout.tsx
nextjs/app/login/: page.tsx
nextjs/app/projects/: page.tsx
nextjs/app/register/: page.tsx
nextjs/app/signup/: page.tsx
nextjs/components/: Navbar.module.css  Navbar.tsx
nextjs/components/Button/: Button.module.css  Button.tsx
nextjs/components/Form/: Form.module.css  Form.tsx
nextjs/components/LoginForm/: LoginForm.module.css  LoginForm.tsx
nextjs/components/Navbar/: Navbar.module.css  Navbar.tsx
nextjs/components/ProjectList/: ProjectList.module.css  ProjectList.tsx
nextjs/components/ProjectPage/: ProjectPage.module.css  ProjectPage.tsx
nextjs/components/RegisterForm/: RegisterForm.module.css  RegisterForm.tsx
nextjs/components/SignupForm/: SignupForm.module.css  SignupForm.tsx
nextjs/components/TextField/: TextField.module.css  TextField.tsx
nextjs/lib/: api.ts  util.ts
(+2 files in other folders)
